[workspace]
package.version = "0.1.0"
members = ["proc"]

[package]
version.workspace = true
name = "gnat"
edition = "2024"

[dependencies]
const-util = "2.2.0"
type-const = "1.1.1"
gnat-proc = { path = "proc" }

[dev-dependencies]
generic-upper-bound = "3.1.1"

[features]
alloc = []
std = ["alloc"]
macros = ["gnat-proc/full"]
