[workspace]
members = ["proc"]
package.version = "0.1.4"
package.license = "MIT"
package.authors = ["Max Dexheimer"]
package.description = "Type-level numbers without extra bounds"
package.rust-version = "1.90"
package.edition = "2024"
package.repository = "https://github.com/maxdexh/gnat"
package.documentation = "https://docs.rs/gnat"

[package]
name = "gnat"
version.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
rust-version.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
const-util = "2.2.0"
gnat-proc = { path = "proc", version = "0.1.4" }

[dev-dependencies]
generic-upper-bound = "3.1.1"

[features]
alloc = []
std = ["alloc"]
macros = ["gnat-proc/full"]
